--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/passport": "^7.3",
         "laravel/tinker": "^1.0",
         "laravolt/avatar": "^2.2",
-        "nesbot/carbon": "^2.19"
+        "nesbot/carbon": "^2.19",
+        "spatie/laravel-cors": "^1.3"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
